# libvfio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_with_fio.sh  run_fio.sh
.github/workflows/: main.yml
examples/: CMakeLists.txt  fio.c  ioat-pmem.fio  ioat.c  nvme.c  pmem.c  randread-256k-ioat.fio  randread-4k.fio  vhost-randread-256k.fio  vhost-randread-4k.fio  vhost-randwrite-4k.fio  vhost_fio_plugin.c
include/: barrier.h  ioat.h  ioat_internal.h  ioat_spec.h  mmio.h  nvme.h  nvme_spec.h  vfio-helper.h
lib/: ioat.c  nvme.c
nvme/: README.md
vfio/: nvme.c  nvme.h  vfio-helper.c
vhost/: CMakeLists.txt  README.md  blk.c  blk.h  conn.c  conn.h  io.c  io.h  main.c  memory.c  memory.h  utils.c  utils.h  vhost_user.c  vhost_user.h  vhost_user_spec.h  virtio_blk.h  virtqueue.c  virtqueue.h
vhost/allocator/: heap.c  llist.c
vhost/allocator/include/: heap.h  llist.h
